# adarand

./: README.md  licnese.txt  pyproject.toml
config/00_finetuning/: rn18.yaml  rn50.yaml  rn50_barlow_twins.yaml  rn50_clip.yaml  rn50_simclr.yaml  vit_b_16.yaml  vit_b_16_clip.yaml  vit_b_32.yaml  vit_b_32_clip.yaml
config/01_randreg-uni/: rn18.yaml  rn50.yaml  rn50_barlow_twins.yaml  rn50_clip.yaml  rn50_simclr.yaml  vit_b_16.yaml  vit_b_16_clip.yaml  vit_b_32.yaml  vit_b_32_clip.yaml
config/02_randreg-std/: rn18.yaml  rn50.yaml  rn50_barlow_twins.yaml  rn50_clip.yaml  rn50_simclr.yaml  vit_b_16.yaml  vit_b_16_clip.yaml  vit_b_32.yaml  vit_b_32_clip.yaml
config/03_randreg-pre/: rn18.yaml  rn50.yaml  rn50_barlow_twins.yaml  rn50_clip.yaml  rn50_simclr.yaml  vit_b_16.yaml  vit_b_16_clip.yaml  vit_b_32.yaml  vit_b_32_clip.yaml
config/04_adarand/: rn18.yaml  rn50.yaml  rn50_barlow_twins.yaml  rn50_clip.yaml  rn50_simclr.yaml  vit_b_16.yaml  vit_b_16_clip.yaml  vit_b_32.yaml  vit_b_32_clip.yaml
data/: generic.py
evaluator/: classification.py
main/: extensions.py  test.py  train.py
model/: clip.py  noise_generator.py  resnet.py  vit.py
script/: split_train_test.py
updater/: adarand.py  classification.py  rand_reg.py
util/: train_util.py  yaml_utils.py
